updated after class

--- a/01_Foundations/01_Exercises.ipynb
+++ b/01_Foundations/01_Exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "sought-chambers",
+   "id": "hybrid-power",
    "metadata": {},
    "source": [
     "Q1: Which statement is True?\n",
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "restricted-banking",
+   "execution_count": 1,
+   "id": "accessible-silence",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put your answer here => "
+    "# Put your answer here => 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "supreme-stream",
+   "execution_count": 3,
+   "id": "severe-nation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "governing-chorus",
+   "id": "biological-tunnel",
    "metadata": {},
    "source": [
     "Q2: How can I verify which answer is correct?"
@@ -42,17 +42,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "optimum-chocolate",
+   "execution_count": 4,
+   "id": "novel-lotus",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Put your code here\n"
+    "# Put your code here\n",
+    "b is a"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "exterior-cancer",
+   "id": "focused-veteran",
    "metadata": {},
    "source": [
     "---\n",
@@ -61,8 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "located-cable",
+   "execution_count": 5,
+   "id": "charitable-diesel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "solid-uniform",
+   "id": "actual-justice",
    "metadata": {},
    "source": [
     "Why did we get each of these outputa?"
@@ -81,62 +93,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "undefined-worth",
+   "execution_count": 11,
+   "id": "departmental-salmon",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Answer: \n",
+    "# Answer: Calling the test function prints \"Executed\" and returns the same value passed to it which is True. \n",
     "test(True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "basic-freight",
+   "execution_count": 12,
+   "id": "empty-giant",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Answer:\n",
+    "# Answer: The 'or' operator requires only one of the two statemets to be true.\n",
+    "#         Since the first was False python must check the second one thus running test(False).\n",
+    "#         The test() returns False so the entire statement is False\n",
     "False or test(False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "useful-triumph",
+   "execution_count": 8,
+   "id": "exclusive-laundry",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Answer:\n",
+    "# Answer: The 'or' operator requires only one of the two statemets to be true.\n",
+    "#         Since the first was True python wont check the second one thus does not run test(False).\n",
     "True or test(False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "hydraulic-length",
+   "execution_count": 9,
+   "id": "affected-eight",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Answer:\n",
+    "# Answer: The 'and' operator requires both of the two statemets to be true.\n",
+    "#         Since the first was True python must check the second one thus running test(False).\n",
     "True and test(True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "rational-contractor",
+   "execution_count": 13,
+   "id": "micro-gabriel",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Answer:\n",
+    "# Answer: The 'and' operator requires both of the two statemets to be true.\n",
+    "#         Since the first was False python wont check the second one thus does not run test(False).\n",
     "False and test(True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "major-somalia",
+   "id": "realistic-cliff",
    "metadata": {},
    "source": [
     "---\n",
@@ -145,17 +238,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "employed-florida",
+   "execution_count": 15,
+   "id": "suitable-middle",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Put your statement here\n"
+    "# Put your statement here\n",
+    "four_cubed = 4**3\n",
+    "four_cubed"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "swedish-evaluation",
+   "id": "affected-interval",
    "metadata": {},
    "source": [
     "---\n",
@@ -165,19 +271,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "vertical-brooks",
+   "execution_count": 18,
+   "id": "convertible-lightning",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 5, 6)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Put your code here\n",
-    "\n",
-    "\n"
+    "t1 = (1, 2, 3)\n",
+    "t2 = (4, 5,6)\n",
+    "t3 = t1 + t2\n",
+    "t3"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "approved-context",
+   "id": "future-approval",
    "metadata": {},
    "source": [
     "---\n",
@@ -186,17 +305,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "committed-criminal",
+   "execution_count": 19,
+   "id": "meaning-verification",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Put your code here\n"
+    "# Put your code here\n",
+    "sum(t3)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "jewish-lender",
+   "id": "special-coverage",
    "metadata": {},
    "source": [
     "---\n",
@@ -205,18 +336,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "confidential-brass",
+   "execution_count": 21,
+   "id": "surgical-liberty",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "<class 'tuple'>\n",
+      "<class 'list'>\n",
+      "<class 'set'>\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Put your answers here =>\n",
-    "t = (('a', 'b', 'c'), ['a', 'b', 'c'], {'a', 'b', 'c'})"
+    "# Put your answers here => Tuple, List, Set\n",
+    "t = (('a', 'b', 'c'), ['a', 'b', 'c'], {'a', 'b', 'c'})\n",
+    "print(f'''\n",
+    "{type(t[0])}\n",
+    "{type(t[1])}\n",
+    "{type(t[2])}\n",
+    "''')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "monthly-simple",
+   "id": "national-revolution",
    "metadata": {},
    "source": [
     "---\n",
@@ -226,17 +374,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "powerful-spine",
+   "execution_count": 22,
+   "id": "radical-horizontal",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('a', 'b', 'c'), ['a', 'b', 'c', 'd'], {'a', 'b', 'c'})"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Put your code here\n"
+    "# Put your code here\n",
+    "t[1].append('d')\n",
+    "t"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "reserved-million",
+   "id": "assisted-infrastructure",
    "metadata": {},
    "source": [
     "---\n",
@@ -246,18 +407,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "gentle-compatibility",
+   "execution_count": 24,
+   "id": "demographic-characteristic",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Python'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = 'The Zen of Python'\n",
-    "# Put your code here\n"
+    "# Put your code here\n",
+    "s[10:]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "turned-novelty",
+   "id": "specified-commons",
    "metadata": {},
    "source": [
     "---\n",
@@ -285,17 +458,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "prescribed-inflation",
+   "execution_count": 26,
+   "id": "charming-bookmark",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A': 'Apple', 'B': 'Bacon', 'C': 'Cat'}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Put your code here\n"
+    "# Put your code here\n",
+    "d = {'A': 'Apple', 'B': 'Bacon', 'C': 'Cat'}\n",
+    "d"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "former-siemens",
+   "id": "elementary-bailey",
    "metadata": {},
    "source": [
     "---\n",
@@ -306,26 +492,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "detected-watson",
+   "execution_count": 27,
+   "id": "departmental-kazakhstan",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \n"
+      "The Cat likes Bacon but won't eat Apples\n"
      ]
     }
    ],
    "source": [
     "# Put your answer between the quotes below\n",
-    "print(f\" \")"
+    "print(f\"The {d['C']} likes {d['B']} but won't eat {d['A']}s\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "peaceful-moore",
+   "id": "shaped-contest",
    "metadata": {},
    "source": [
     "---\n",
@@ -334,8 +520,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "orange-failure",
+   "execution_count": 28,
+   "id": "irish-fruit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,12 +530,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "editorial-backing",
+   "execution_count": 30,
+   "id": "cognitive-acoustic",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['%', '*', 'A', 'C', 'G', 'X']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Put your code here\n"
+    "# Put your code here\n",
+    "l.sort()\n",
+    "l"
    ]
   }
  ],
