changes after 9mar21 class

--- a/02_Data_Wrangling/Solutions_Python_Quiz_1_March_5.ipynb
+++ b/02_Data_Wrangling/Solutions_Python_Quiz_1_March_5.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "nonprofit-lesson",
+   "id": "appreciated-surfing",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SAS Connection established. Subprocess id is 841321\n",
+      "SAS Connection established. Subprocess id is 94451\n",
       "\n"
      ]
     }
@@ -25,8 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "steady-brand",
+   "execution_count": 2,
+   "id": "loaded-harvey",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "saspy.sasdata.SASdata"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "remarkable-secondary",
+   "execution_count": 3,
+   "id": "imposed-edition",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,8 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "entire-lounge",
+   "execution_count": 4,
+   "id": "caroline-supplier",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "4 1949-05-01  121    ALL"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,8 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "early-helping",
+   "execution_count": 5,
+   "id": "dirty-oregon",
    "metadata": {},
    "outputs": [
     {
@@ -1295,8 +1295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "continental-macedonia",
+   "execution_count": 6,
+   "id": "static-radio",
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
        "Index(['DATE', 'AIR', 'Region'], dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,8 +1318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "electric-highland",
+   "execution_count": 7,
+   "id": "running-emperor",
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1328,7 @@
        "<AxesSubplot:xlabel='DATE', ylabel='AIR'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1352,8 +1352,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "known-florist",
+   "execution_count": 8,
+   "id": "complex-sleeping",
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
        "Timedelta('4352 days 00:00:00')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,8 +1373,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "breathing-focus",
+   "execution_count": 10,
+   "id": "casual-underwear",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "capitals = {'OH': 'Columbus', 'NC': 'Raleigh', 'TN': 'Nashville', 'AK': 'Juneau'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "expected-peace",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Columbus'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "capitals['OH']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "regular-detail",
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1420,6 @@
     }
    ],
    "source": [
-    "capitals = {'OH': 'Columbus', 'NC': 'Raleigh', 'TN': 'Nashville', 'AK': 'Juneau'}\n",
     "for state in capitals:\n",
     "    print(f'The capital of {state} is {capitals[state]}')"
    ]
@@ -1397,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "polished-bikini",
+   "id": "following-nightlife",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1407,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "separated-trade",
+   "id": "existing-birmingham",
    "metadata": {},
    "outputs": [
     {
@@ -1494,8 +1524,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "dress-blowing",
+   "execution_count": 12,
+   "id": "british-silver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,8 +1535,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "derived-enterprise",
+   "execution_count": 13,
+   "id": "stainless-mission",
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1545,7 @@
        "saspy.sasdata.SASdata"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "therapeutic-issue",
+   "id": "thick-surge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1539,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "organized-catalyst",
+   "id": "further-championship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,7 +1581,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "sharp-forum",
+   "id": "frank-lodging",
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1761,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "initial-trial",
+   "id": "demographic-tiffany",
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1940,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "amber-hearts",
+   "id": "divided-understanding",
    "metadata": {},
    "outputs": [
     {
@@ -1932,7 +1962,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "experimental-setting",
+   "id": "polar-excess",
    "metadata": {},
    "outputs": [
     {
@@ -1953,7 +1983,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "spectacular-fifth",
+   "id": "communist-purse",
    "metadata": {},
    "outputs": [
     {
@@ -2163,7 +2193,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "attempted-purse",
+   "id": "duplicate-penny",
    "metadata": {},
    "outputs": [
     {
@@ -2386,7 +2416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
