--- a/02_Data_Wrangling/p103a03.ipynb
+++ b/02_Data_Wrangling/p103a03.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SAS Connection established. Subprocess id is 8144\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get a SAS session object\n",
     "sas = saspy.SASsession(cfgname=\"oda\")"
@@ -47,28 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\f",
-      "5                                                          The SAS System                        Tuesday, March  9, 2021 09:02:00 PM\n",
-      "\n",
-      "24         \n",
-      "25         libname pg1 base  '~/PG1/Data/data/data'  ;\n",
-      "26         \n",
-      "27         \n",
-      "28         \n",
-      "\f",
-      "6                                                          The SAS System                        Tuesday, March  9, 2021 09:02:00 PM\n",
-      "\n",
-      "29         \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Assign the PG1 library\n",
     "sas.saslib('pg1', engine='base', path='~/PG1/Data/data/data')"
@@ -99,12 +71,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creat a new DataFrame object by pulling PG1.STORM_SUMMARY data from SAS.\n",
     "storm_summary_df = sas.sasdata('STORM_SUMMARY', 'PG1').to_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Succesfully disconnected. Be sure to have a valid network connection before submitting anything else.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Disconnect from SAS server\n",
+    "sas.disconnect()"
    ]
   },
   {
@@ -149,98 +142,98 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1980</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>na</td>\n",
-       "      <td>TS</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1980-07-17</td>\n",
-       "      <td>1980-11-18</td>\n",
+       "      <th>3113</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>VARDAH</td>\n",
+       "      <td>NI</td>\n",
+       "      <td>NR</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>975.0</td>\n",
+       "      <td>2016-12-06</td>\n",
+       "      <td>2016-12-17</td>\n",
        "      <td>N</td>\n",
-       "      <td>W</td>\n",
-       "      <td>25.7</td>\n",
-       "      <td>-91.2</td>\n",
+       "      <td>E</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>84.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1980</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>3114</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>VICTOR</td>\n",
        "      <td>SP</td>\n",
        "      <td>NR</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>998.0</td>\n",
-       "      <td>1980-03-27</td>\n",
-       "      <td>1980-03-30</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>958.0</td>\n",
+       "      <td>2016-01-14</td>\n",
+       "      <td>2016-01-22</td>\n",
        "      <td>S</td>\n",
-       "      <td>E</td>\n",
-       "      <td>19.1</td>\n",
-       "      <td>137.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1980</td>\n",
-       "      <td>AGATHA</td>\n",
-       "      <td>EP</td>\n",
-       "      <td>TS</td>\n",
-       "      <td>115.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1980-06-09</td>\n",
-       "      <td>1980-06-15</td>\n",
-       "      <td>N</td>\n",
        "      <td>W</td>\n",
-       "      <td>12.8</td>\n",
-       "      <td>-118.7</td>\n",
+       "      <td>-20.2</td>\n",
+       "      <td>-166.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1980</td>\n",
-       "      <td>ALBINE</td>\n",
-       "      <td>SI</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1979-11-27</td>\n",
-       "      <td>1979-12-06</td>\n",
+       "      <th>3115</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>WINSTON</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>NR</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>884.0</td>\n",
+       "      <td>2016-02-10</td>\n",
+       "      <td>2016-02-26</td>\n",
        "      <td>S</td>\n",
        "      <td>E</td>\n",
-       "      <td>19.1</td>\n",
-       "      <td>137.0</td>\n",
+       "      <td>-17.0</td>\n",
+       "      <td>179.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1980</td>\n",
-       "      <td>ALEX</td>\n",
-       "      <td>WP</td>\n",
-       "      <td>TS</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>998.0</td>\n",
-       "      <td>1980-10-09</td>\n",
-       "      <td>1980-10-14</td>\n",
-       "      <td>N</td>\n",
-       "      <td>E</td>\n",
-       "      <td>27.2</td>\n",
-       "      <td>140.5</td>\n",
+       "      <th>3116</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>YALO</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>NR</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2016-02-24</td>\n",
+       "      <td>2016-02-26</td>\n",
+       "      <td>S</td>\n",
+       "      <td>W</td>\n",
+       "      <td>-20.0</td>\n",
+       "      <td>-154.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3117</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>ZENA</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>NR</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>975.0</td>\n",
+       "      <td>2016-04-05</td>\n",
+       "      <td>2016-04-07</td>\n",
+       "      <td>S</td>\n",
+       "      <td>W</td>\n",
+       "      <td>-18.8</td>\n",
+       "      <td>175.3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Season    Name Basin Type  MaxWindMPH  MinPressure  StartDate    EndDate  \\\n",
-       "0    1980     NaN    na   TS        35.0          NaN 1980-07-17 1980-11-18   \n",
-       "1    1980     NaN    SP   NR         NaN        998.0 1980-03-27 1980-03-30   \n",
-       "2    1980  AGATHA    EP   TS       115.0          NaN 1980-06-09 1980-06-15   \n",
-       "3    1980  ALBINE    SI   ET         NaN          NaN 1979-11-27 1979-12-06   \n",
-       "4    1980    ALEX    WP   TS        40.0        998.0 1980-10-09 1980-10-14   \n",
+       "      Season     Name Basin Type  MaxWindMPH  MinPressure  StartDate  \\\n",
+       "3113    2016   VARDAH    NI   NR        81.0        975.0 2016-12-06   \n",
+       "3114    2016   VICTOR    SP   NR        92.0        958.0 2016-01-14   \n",
+       "3115    2016  WINSTON    SP   NR       173.0        884.0 2016-02-10   \n",
+       "3116    2016     YALO    SP   NR        46.0        100.0 2016-02-24   \n",
+       "3117    2016     ZENA    SP   NR        81.0        975.0 2016-04-05   \n",
        "\n",
-       "  Hem_NS Hem_EW   Lat    Lon  \n",
-       "0      N      W  25.7  -91.2  \n",
-       "1      S      E  19.1  137.0  \n",
-       "2      N      W  12.8 -118.7  \n",
-       "3      S      E  19.1  137.0  \n",
-       "4      N      E  27.2  140.5  "
+       "        EndDate Hem_NS Hem_EW   Lat    Lon  \n",
+       "3113 2016-12-17      N      E  13.3   84.7  \n",
+       "3114 2016-01-22      S      W -20.2 -166.3  \n",
+       "3115 2016-02-26      S      E -17.0  179.9  \n",
+       "3116 2016-02-26      S      W -20.0 -154.9  \n",
+       "3117 2016-04-07      S      W -18.8  175.3  "
       ]
      },
      "execution_count": 8,
@@ -250,12 +243,12 @@
    ],
    "source": [
     "# Print out the first 5 records\n",
-    "storm_summary_df.head()"
+    "storm_summary_df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +315,7 @@
        "MinPressure  359.0  903.487465  818.808652 -9999.0  954.0  975.0  986.0  998.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +341,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,24 +352,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Succesfully disconnected. Be sure to have a valid network connection before submitting anything else.'"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Disconnect from SAS server\n",
-    "sas.disconnect()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -395,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
